--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/usr/local/Cellar/python@3.8/3.8.7/Frameworks/Python.framework/Versions/3.8/bin/python3.8"
+    "python.pythonPath": "/Library/Frameworks/Python.framework/Versions/3.9/bin/python3.9"
 }
