--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,10 +10,8 @@ jobs:
   build:
     runs-on: southindiancoffee-dev
     steps:
-      - uses: actions/checkout@v2
-      - name: Run a one-line script
-        run: echo Hello, world!
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+      - name: Clone Repositorie
+        uses: actions/checkout@v2
+
+      - name: Restart Apache2 Server
+        run: sudo service apache2 restart
