--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ coreapi==2.3.3
 coreschema==0.0.4
 Django==3.1.7
 django-cors-headers==3.7.0
+django-crontab==0.7.1
 djangorestframework==3.12.4
 drf-yasg==1.20.0
 idna==2.10
