--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,10 @@ jobs:
         run: source /home/ubuntu/southindiancoffee/southindiancoffee_venv/bin/activate
 
       - name: Check Django Errors
-        run: pwd
+        run: python3 manage.py check
+
+      - name: Check Django Security Errors
+        run: python3 manage.py check --deploy
 
       - name: Restart SouthIndianCoffee Service
         run: sudo service southindiancoffee restart
