--- a/requirements.txt
+++ b/requirements.txt
@@ -8,11 +8,13 @@ django-cors-headers==3.7.0
 django-crontab==0.7.1
 djangorestframework==3.12.4
 drf-yasg==1.20.0
+et-xmlfile==1.0.1
 idna==2.10
 inflection==0.5.1
 itypes==1.2.0
 Jinja2==2.11.3
 MarkupSafe==1.1.1
+openpyxl==3.0.7
 packaging==20.9
 psycopg2-binary==2.8.6
 pyparsing==2.4.7
