--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,38 +1,41 @@
-name: SouthIndianCoffee Production
+name: SouthIndianCoffee Testing
+
 on:
   push:
-    branches: [ main ]
+    branches: [ test ]
   pull_request:
-    branches: [ main ]
+    branches: [ test ]
   workflow_dispatch:
 
 jobs:
   build:
-    runs-on: prod_server
+    runs-on: django-dev
+
     steps:
       - name: Clone Repositorie
         uses: actions/checkout@v2
+        with:
+          path: 'test'
 
       - name: Activate Virtualenv & Installing Requirements
         run: |
-          source /home/ubuntu/southindiancoffee/southindiancoffee_venv/bin/activate
+          source /home/ubuntu/southindiancoffee/test/southindiancoffee_venv/bin/activate
           pip3 install -r requirements.txt
           deactivate
-
       - name: Check Django Errors
-        run: python3 manage.py check --settings=south_indian_coffee_pro.settings.pro
-
-      - name: Check Django Security Errors
-        run: python3 manage.py check --deploy --settings=south_indian_coffee_pro.settings.pro
-
+        run: |
+          cd test
+          python3 manage.py check --settings=south_indian_coffee_pro.settings.test
       - name: Generating Django Migrations Files
-        run: python3 manage.py makemigrations --settings=south_indian_coffee_pro.settings.pro
-
+        run: |
+          cd test
+          python3 manage.py makemigrations --settings=south_indian_coffee_pro.settings.test
       - name: Migratings Changes to Database
-        run: python3 manage.py migrate --settings=south_indian_coffee_pro.settings.pro
-
+        run: |
+          cd test
+          python3 manage.py migrate --settings=south_indian_coffee_pro.settings.test
       - name: Restart SouthIndianCoffee Service
-        run: sudo service southindiancoffee restart
+        run: sudo service southindiancoffee-test restart
 
       - name: Restart NGINX Server
         run: sudo service nginx restart
