--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,22 +19,28 @@ jobs:
 
       - name: Activate Virtualenv & Installing Requirements
         run: |
-          source /home/ubuntu/southindiancoffee/test/southindiancoffee_venv/bin/activate
           cd test
+          source /home/ubuntu/southindiancoffee/test/southindiancoffee_venv/bin/activate
           pip3 install -r requirements.txt
           deactivate
       - name: Check Django Errors
         run: |
           cd test
+          source /home/ubuntu/southindiancoffee/test/southindiancoffee_venv/bin/activate
           python3 manage.py check --settings=south_indian_coffee_pro.settings.test
+          deactivate
       - name: Generating Django Migrations Files
         run: |
           cd test
+          source /home/ubuntu/southindiancoffee/test/southindiancoffee_venv/bin/activate
           python3 manage.py makemigrations --settings=south_indian_coffee_pro.settings.test
+          deactivate
       - name: Migratings Changes to Database
         run: |
           cd test
+          source /home/ubuntu/southindiancoffee/test/southindiancoffee_venv/bin/activate
           python3 manage.py migrate --settings=south_indian_coffee_pro.settings.test
+          deactivate
       - name: Restart SouthIndianCoffee Service
         run: sudo service southindiancoffee-test restart
 
