--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,17 +27,23 @@ jobs:
       - name: Check Django Errors
         run: |
           cd dev
+          source /home/ubuntu/southindiancoffee/dev/southindiancoffee_venv/bin/activate
           python3 manage.py check --settings=south_indian_coffee_pro.settings.dev
+          deactivate
 
       - name: Generating Django Migrations Files
         run: |
           cd dev
+          source /home/ubuntu/southindiancoffee/dev/southindiancoffee_venv/bin/activate
           python3 manage.py makemigrations --settings=south_indian_coffee_pro.settings.dev
+          deactivate
 
       - name: Migratings Changes to Database
         run: |
           cd dev
+          source /home/ubuntu/southindiancoffee/dev/southindiancoffee_venv/bin/activate
           python3 manage.py migrate --settings=south_indian_coffee_pro.settings.dev
+          deactivate
 
       - name: Restart SouthIndianCoffee Service
         run: sudo service southindiancoffee-dev restart
