--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ pytz==2021.1
 requests==2.25.1
 ruamel.yaml==0.17.2
 ruamel.yaml.clib==0.2.2
+sentry-sdk==1.0.0
 sqlparse==0.4.1
 uritemplate==3.0.1
 urllib3==1.26.4
