--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,10 @@
-name: SouthIndianCoffee Testing
+name: SouthIndianCoffee Development
 
 on:
   push:
-    branches: [ test ]
+    branches: [ dev ]
   pull_request:
-    branches: [ test ]
+    branches: [ dev ]
   workflow_dispatch:
 
 jobs:
@@ -15,34 +15,34 @@ jobs:
       - name: Clone Repositorie
         uses: actions/checkout@v2
         with:
-          path: 'test'
+          path: 'dev'
 
       - name: Activate Virtualenv & Installing Requirements
         run: |
-          cd test
-          source /home/ubuntu/southindiancoffee/test/southindiancoffee_venv/bin/activate
+          cd dev
+          source /home/ubuntu/southindiancoffee/dev/southindiancoffee_venv/bin/activate
           pip3 install -r requirements.txt
           deactivate
       - name: Check Django Errors
         run: |
-          cd test
-          source /home/ubuntu/southindiancoffee/test/southindiancoffee_venv/bin/activate
-          python3 manage.py check --settings=south_indian_coffee_pro.settings.test
+          cd dev
+          source /home/ubuntu/southindiancoffee/dev/southindiancoffee_venv/bin/activate
+          python3 manage.py check --settings=south_indian_coffee_pro.settings.dev
           deactivate
       - name: Generating Django Migrations Files
         run: |
-          cd test
-          source /home/ubuntu/southindiancoffee/test/southindiancoffee_venv/bin/activate
-          python3 manage.py makemigrations --settings=south_indian_coffee_pro.settings.test
+          cd dev
+          source /home/ubuntu/southindiancoffee/dev/southindiancoffee_venv/bin/activate
+          python3 manage.py makemigrations --settings=south_indian_coffee_pro.settings.dev
           deactivate
       - name: Migratings Changes to Database
         run: |
-          cd test
-          source /home/ubuntu/southindiancoffee/test/southindiancoffee_venv/bin/activate
-          python3 manage.py migrate --settings=south_indian_coffee_pro.settings.test
+          cd dev
+          source /home/ubuntu/southindiancoffee/dev/southindiancoffee_venv/bin/activate
+          python3 manage.py migrate --settings=south_indian_coffee_pro.settings.dev
           deactivate
       - name: Restart SouthIndianCoffee Service
-        run: sudo service southindiancoffee-test restart
+        run: sudo service southindiancoffee-dev restart
 
       - name: Restart NGINX Server
         run: sudo service nginx restart
