--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,48 +1,52 @@
-name: SouthIndianCoffee Development
+name: Production
 
 on:
   push:
-    branches: [ dev ]
+    branches: [ main ]
   pull_request:
-    branches: [ dev ]
+    branches: [ main ]
   workflow_dispatch:
 
 jobs:
   build:
-    runs-on: django-dev
+    runs-on: prod_server
 
     steps:
       - name: Clone Repositorie
         uses: actions/checkout@v2
-        with:
-          path: 'dev'
 
       - name: Activate Virtualenv & Installing Requirements
         run: |
-          cd dev
-          source /home/ubuntu/southindiancoffee/dev/southindiancoffee_venv/bin/activate
+          source /home/ubuntu/southindiancoffee/southindiancoffee_venv/bin/activate
           pip3 install -r requirements.txt
           deactivate
+
       - name: Check Django Errors
         run: |
-          cd dev
-          source /home/ubuntu/southindiancoffee/dev/southindiancoffee_venv/bin/activate
-          python3 manage.py check --settings=south_indian_coffee_pro.settings.dev
+          source /home/ubuntu/southindiancoffee/southindiancoffee_venv/bin/activate
+          python3 manage.py check --settings=south_indian_coffee_pro.settings.pro
           deactivate
+
+      - name: Check Django Security Errors
+        run: |
+          source /home/ubuntu/southindiancoffee/southindiancoffee_venv/bin/activate
+          python3 manage.py check --deploy --settings=south_indian_coffee_pro.settings.pro
+          deactivate
+
       - name: Generating Django Migrations Files
         run: |
-          cd dev
-          source /home/ubuntu/southindiancoffee/dev/southindiancoffee_venv/bin/activate
-          python3 manage.py makemigrations --settings=south_indian_coffee_pro.settings.dev
+          source /home/ubuntu/southindiancoffee/southindiancoffee_venv/bin/activate
+          python3 manage.py makemigrations --settings=south_indian_coffee_pro.settings.pro
           deactivate
+
       - name: Migratings Changes to Database
         run: |
-          cd dev
-          source /home/ubuntu/southindiancoffee/dev/southindiancoffee_venv/bin/activate
-          python3 manage.py migrate --settings=south_indian_coffee_pro.settings.dev
+          source /home/ubuntu/southindiancoffee/southindiancoffee_venv/bin/activate
+          python3 manage.py migrate --settings=south_indian_coffee_pro.settings.pro
           deactivate
+
       - name: Restart SouthIndianCoffee Service
-        run: sudo service southindiancoffee-dev restart
+        run: sudo service southindiancoffee restart
 
       - name: Restart NGINX Server
         run: sudo service nginx restart
